--- a/test.ipynb
+++ b/test.ipynb
@@ -90,6 +90,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting matplotlib\n",
+      "  Using cached matplotlib-3.9.2-cp312-cp312-macosx_11_0_arm64.whl.metadata (11 kB)\n",
+      "Collecting contourpy>=1.0.1 (from matplotlib)\n",
+      "  Using cached contourpy-1.3.0-cp312-cp312-macosx_11_0_arm64.whl.metadata (5.4 kB)\n",
+      "Collecting cycler>=0.10 (from matplotlib)\n",
+      "  Using cached cycler-0.12.1-py3-none-any.whl.metadata (3.8 kB)\n",
+      "Collecting fonttools>=4.22.0 (from matplotlib)\n",
+      "  Using cached fonttools-4.54.1-cp312-cp312-macosx_11_0_arm64.whl.metadata (163 kB)\n",
+      "Collecting kiwisolver>=1.3.1 (from matplotlib)\n",
+      "  Using cached kiwisolver-1.4.7-cp312-cp312-macosx_11_0_arm64.whl.metadata (6.3 kB)\n",
+      "Requirement already satisfied: numpy>=1.23 in /opt/anaconda3/envs/Computer-vision/lib/python3.12/site-packages (from matplotlib) (2.1.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in /opt/anaconda3/envs/Computer-vision/lib/python3.12/site-packages (from matplotlib) (24.1)\n",
+      "Requirement already satisfied: pillow>=8 in /opt/anaconda3/envs/Computer-vision/lib/python3.12/site-packages (from matplotlib) (10.4.0)\n",
+      "Collecting pyparsing>=2.3.1 (from matplotlib)\n",
+      "  Using cached pyparsing-3.1.4-py3-none-any.whl.metadata (5.1 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /opt/anaconda3/envs/Computer-vision/lib/python3.12/site-packages (from matplotlib) (2.9.0)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/anaconda3/envs/Computer-vision/lib/python3.12/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
+      "Using cached matplotlib-3.9.2-cp312-cp312-macosx_11_0_arm64.whl (7.8 MB)\n",
+      "Using cached contourpy-1.3.0-cp312-cp312-macosx_11_0_arm64.whl (251 kB)\n",
+      "Using cached cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
+      "Using cached fonttools-4.54.1-cp312-cp312-macosx_11_0_arm64.whl (2.3 MB)\n",
+      "Using cached kiwisolver-1.4.7-cp312-cp312-macosx_11_0_arm64.whl (63 kB)\n",
+      "Using cached pyparsing-3.1.4-py3-none-any.whl (104 kB)\n",
+      "Installing collected packages: pyparsing, kiwisolver, fonttools, cycler, contourpy, matplotlib\n",
+      "Successfully installed contourpy-1.3.0 cycler-0.12.1 fonttools-4.54.1 kiwisolver-1.4.7 matplotlib-3.9.2 pyparsing-3.1.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using cache found in /Users/mac/.cache/torch/hub/intel-isl_MiDaS_master\n",
+      "Using cache found in /Users/mac/.cache/torch/hub/intel-isl_MiDaS_master\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m model\u001b[38;5;241m=\u001b[39mutilis\u001b[38;5;241m.\u001b[39mload_model()\n\u001b[1;32m      5\u001b[0m img\u001b[38;5;241m=\u001b[39mcv2\u001b[38;5;241m.\u001b[39mimread(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/Users/mac/Dev/Computer-vision/Manual-Brokeh/image/Image 4.jpeg\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 6\u001b[0m depth_map\u001b[38;5;241m=\u001b[39m\u001b[43mutilis\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdepth_map\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mDPT_Large\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Hiển thị ảnh\u001b[39;00m\n\u001b[1;32m      9\u001b[0m plt\u001b[38;5;241m.\u001b[39mimshow(depth_map)\n",
+      "File \u001b[0;32m~/Dev/Computer-vision/Manual-Brokeh/utilis.py:25\u001b[0m, in \u001b[0;36mdepth_map\u001b[0;34m(img, midas, model_type, device)\u001b[0m\n\u001b[1;32m     23\u001b[0m input_batch \u001b[38;5;241m=\u001b[39m transform(img_rgb)\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mno_grad():\n\u001b[0;32m---> 25\u001b[0m     prediction \u001b[38;5;241m=\u001b[39m \u001b[43mmidas\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_batch\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m     prediction \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mnn\u001b[38;5;241m.\u001b[39mfunctional\u001b[38;5;241m.\u001b[39minterpolate(\n\u001b[1;32m     27\u001b[0m         prediction\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m1\u001b[39m),\n\u001b[1;32m     28\u001b[0m         size\u001b[38;5;241m=\u001b[39mimg_rgb\u001b[38;5;241m.\u001b[39mshape[:\u001b[38;5;241m2\u001b[39m],\n\u001b[1;32m     29\u001b[0m         mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbicubic\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     30\u001b[0m         align_corners\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[1;32m     31\u001b[0m     )\u001b[38;5;241m.\u001b[39msqueeze()\n\u001b[1;32m     33\u001b[0m output \u001b[38;5;241m=\u001b[39m prediction\u001b[38;5;241m.\u001b[39mcpu()\u001b[38;5;241m.\u001b[39mnumpy()\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "import utilis\n",
+    "import matplotlib.pyplot as plt\n",
+    "import cv2\n",
+    "model=utilis.load_model()\n",
+    "img=cv2.imread(\"/Users/mac/Dev/Computer-vision/Manual-Brokeh/image/Image 4.jpeg\")\n",
+    "depth_map=utilis.depth_map(img,model)\n",
+    "\n",
+    "# Hiển thị ảnh\n",
+    "plt.imshow(depth_map)\n",
+    "plt.axis('off')  # Tắt trục tọa độ\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
