--- a/test.ipynb
+++ b/test.ipynb
@@ -41,7 +41,8 @@
    ],
    "source": [
     "import sys\n",
-    "print(sys.executable)\n"
+    "print(sys.executable)\n",
+    "import torch\n"
    ]
   },
   {
